--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@
 
 body {
   height: 100vh;
-  min-height: 600px;
+  min-height: 500px;
+  min-width: 300px;
   overflow-x: hidden;
   width: 100vw
 }
